# Simulator

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: main.cpp
src/command/: CommandDispatcher.cpp  CommandDispatcher.hpp  CommandHandlers.cpp  CommandHandlers.hpp  ICommandHandler.hpp
src/demo/: Demo.cpp  Demo.hpp
src/network/: Session.cpp  Session.hpp  TcpServer.cpp  TcpServer.hpp  UdpServer.cpp  UdpServer.hpp
src/render/: Renderer.cpp  Renderer.hpp
src/world/: Grid.cpp  Grid.hpp  MotionTick.hpp  RvcState.cpp  RvcState.hpp
tests/: CMakeLists.txt  test_command_dispatcher.cpp  test_dispatcher.cpp  test_grid.cpp  test_renderer.cpp  test_rvc_state.cpp  test_rvcstate.cpp
